--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,7 @@
 [theme]
-base="dark"
-font="serif"
-primaryColor = '31c44c'
-backgroundColor = '#F3F7F0'
-secondaryBackgroundColor = '#97f0a6'
+
+primaryColor="#d33682"
+backgroundColor="#002b36"
+secondaryBackgroundColor="#586e75"
+textColor="#fafafa"
+font="sans serif"
