--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 
-primaryColor="#d33682"
+primaryColor="#6eb52f"
 backgroundColor="#002b36"
 secondaryBackgroundColor="#586e75"
 textColor="#fafafa"
