--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,6 @@
 [theme]
-
-primaryColor="#6eb52f"
-backgroundColor="#002b36"
-secondaryBackgroundColor="#586e75"
-textColor="#fafafa"
-font="sans serif"
+primaryColor="#3498db"  # Blue color for primary elements
+backgroundColor="#f5f5f5"  # Light gray background
+secondaryBackgroundColor="#ecf0f1"  # Slightly darker background
+textColor="#333333"  # Dark text color for readability
+font="Arial, sans-serif"  # Clean and professional font
