--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#3498db"  # Blue color for primary elements
-backgroundColor="#f5f5f5"  # Light gray background
-secondaryBackgroundColor="#ecf0f1"  # Slightly darker background
-textColor="#333333"  # Dark text color for readability
-font="Arial, sans-serif"  # Clean and professional font
+primaryColor="#3498db"  # Vibrant blue primary color
+backgroundColor="#f8f9fa"  # Light grayish background
+secondaryBackgroundColor="#e9ecef"  # Slightly darker background
+textColor="#212529"  # Dark text color for contrast
+font="Roboto, sans-serif"  # Modern and sleek font
