--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#3498db"  # Vibrant blue primary color
-backgroundColor="#f8f9fa"  # Light grayish background
-secondaryBackgroundColor="#e9ecef"  # Slightly darker background
-textColor="#212529"  # Dark text color for contrast
+backgroundColor="#2c3e50"  # Dark blue-gray background
+secondaryBackgroundColor="#34495e"  # Medium blue-gray background
+textColor="#ffffff"  # White text color for contrast
 font="Roboto, sans-serif"  # Modern and sleek font
